--- a/TestTimeAdaption.ipynb
+++ b/TestTimeAdaption.ipynb
@@ -3447,7 +3447,7 @@
    "source": [
     "!pip install huggingface_hub\n",
     "!pip install datasets pillow\n",
-    "!huggingface-cli login --token \"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\""
+    "!huggingface-cli login --token \"hugging_face_token\""
    ]
   },
   {
